--- a/src/Components/CustomNodes/MessageNode/MessageNode.css
+++ b/src/Components/CustomNodes/MessageNode/MessageNode.css
@@ -1,7 +1,7 @@
 .messageNode{
     background-color: white;
-    border-radius: 8px;
-  border: 2px solid black;
+    border-radius: 6px;
+  border: 1px solid gray;
   padding: 5px;
   width: 230px;
   height: 65px;
@@ -9,7 +9,7 @@
 }
 .selected{
     border-radius: 8px;
-    border: 0.5px solid black;
+    border: 2px solid black;
 }
 
 .inner-Wrapper{
